se cambio el titulo del index

--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie-edge">
-    <title>Documento</title>
+    <title>brenda</title>
 </head>
 
 <body>
 <h1>Hola Mundo</h1>
 <h2>Hola git</h2>
-
 
 
 </body>
